--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -1278,7 +1278,7 @@
                         </div>
 
                         <p class="help-block">
-                            Add a new notification agent, or configure an existing notification agent by clicking the settings icon on the right.
+                            Add a new notification agent, or configure an existing notification agent by clicking on the item below.
                         </p>
                         <p class="help-block">
                             Please see the <a href="${anon_url('https://github.com/%s/%s/wiki/Notification-Agents-Guide' % (plexpy.CONFIG.GIT_USER, plexpy.CONFIG.GIT_REPO))}" target="_blank" rel="noreferrer">Notification Agents Guide</a> for instructions on setting up each notification agent.
@@ -1298,7 +1298,7 @@
                         </div>
 
                         <p class="help-block">
-                            Add a new newsletter agent, or configure an existing newsletter agent by clicking the settings icon on the right.
+                            Add a new newsletter agent, or configure an existing newsletter agent by clicking on the item below.
                         </p>
                         <p class="help-block settings-warning" id="newsletter_upload_warning">
                             Warning: The <a data-tab-destination="3rd_party_apis" data-target="notify_upload_posters">Image Hosting</a> setting must be enabled for images to display on the newsletter.</span>
@@ -1630,7 +1630,7 @@
                         </div>
                         <div class="form-group">
                             <label>Registered Devices</label>
-                            <p class="help-block">Register a new device using a QR code, or configure an existing device by clicking the settings icon on the right.</p>
+                            <p class="help-block">Register a new device using a QR code, or configure an existing device by clicking on the item below.</p>
                             <p id="app_api_msg" style="color: #eb8600;">Warning: The API must be enabled under <a data-tab-destination="web_interface" data-target="api_enabled">Web Interface</a> to use the app.</p>
                             <br />
                             <div class="row">
