--- a/data/interfaces/default/library_recently_added.html
+++ b/data/interfaces/default/library_recently_added.html
@@ -42,19 +42,19 @@ DOCUMENTATION :: END
             <li>
                 % if item['media_type'] == 'episode' or item['media_type'] == 'movie':
                 % if item['media_type'] == 'movie':
-                <a href="${page('info', item['rating_key'])}" title="${item['title']}">
+                <a href="${page('info', item['rating_key'], server_id=item['server_id'])}" title="${item['title']}">
                 % elif item['media_type'] == 'episode':
-                <a href="${page('info', item['rating_key'])}" title="${item['grandparent_title']}">
+                <a href="${page('info', item['rating_key'], server_id=item['server_id'])}" title="${item['grandparent_title']}">
                 % endif
                     <div class="dashboard-recent-media-poster">
                         % if item['media_type'] == 'episode':
                         % if item['parent_thumb']:
-                        <div class="dashboard-recent-media-poster-face" style="background-image: url(${page('pms_image_proxy', item['parent_thumb'], item['parent_rating_key'], 300, 450, fallback='poster')});">
+                        <div class="dashboard-recent-media-poster-face" style="background-image: url(${page('pms_image_proxy', item['parent_thumb'], item['parent_rating_key'], 300, 450, fallback='poster', server_id=item['server_id'])});">
                         % else:
-                        <div class="dashboard-recent-media-poster-face" style="background-image: url(${page('pms_image_proxy', item['grandparent_thumb'], item['grandparent_rating_key'], 300, 450, fallback='poster')});">
+                        <div class="dashboard-recent-media-poster-face" style="background-image: url(${page('pms_image_proxy', item['grandparent_thumb'], item['grandparent_rating_key'], 300, 450, fallback='poster', server_id=item['server_id'])});">
                         % endif
                         % elif item['media_type'] == 'movie':
-                        <div class="dashboard-recent-media-poster-face" style="background-image: url(${page('pms_image_proxy', item['thumb'], item['rating_key'], 300, 450, fallback='poster')});">
+                        <div class="dashboard-recent-media-poster-face" style="background-image: url(${page('pms_image_proxy', item['thumb'], item['rating_key'], 300, 450, fallback='poster', server_id=item['server_id'])});">
                             % endif
                             <div class="dashboard-recent-media-overlay">
                                 <div class="dashboard-recent-media-overlay-text" id="added_at-${item['rating_key']}">
@@ -72,27 +72,27 @@ DOCUMENTATION :: END
                 <div class="dashboard-recent-media-metacontainer">
                     % if item['media_type'] == 'episode':
                     <h3>
-                        <a href="${page('info', item['grandparent_rating_key'])}" title="${item['grandparent_title']}">${item['grandparent_title']}</a>
+                        <a href="${page('info', item['grandparent_rating_key'], server_id=item['server_id'])}" title="${item['grandparent_title']}">${item['grandparent_title']}</a>
                     </h3>
                     <h3 class="text-muted">
-                        <a href="${page('info', item['rating_key'])}" title="${item['title']}">${item['title']}</a>
+                        <a href="${page('info', item['rating_key'], server_id=item['server_id'])}" title="${item['title']}">${item['title']}</a>
                     </h3>
                     <h3 class="text-muted">
-                        <a href="${page('info', item['parent_rating_key'])}" title="${item['parent_title']}">${short_season(item['parent_title'])}</a>
-                         &middot; <a href="${page('info', item['rating_key'])}" title="Episode ${item['media_index']}">E${item['media_index']}</a>
+                        <a href="${page('info', item['parent_rating_key'], server_id=item['server_id'])}" title="${item['parent_title']}">${short_season(item['parent_title'])}</a>
+                         &middot; <a href="${page('info', item['rating_key'], server_id=item['server_id'])}" title="Episode ${item['media_index']}">E${item['media_index']}</a>
                     </h3>
                     % elif item['media_type'] == 'movie':
                     <h3>
-                        <a href="${page('info', item['rating_key'])}" title="${item['title']}">${item['title']}</a>
+                        <a href="${page('info', item['rating_key'], server_id=item['server_id'])}" title="${item['title']}">${item['title']}</a>
                     </h3>
                     <h3 class="text-muted">${item['year']}</h3>
                     <h3 class="text-muted">&nbsp;</h3>
                     % endif
                 </div>
                 % elif item['media_type'] == 'album':
-                <a href="${page('info', item['rating_key'])}" title="${item['title']}">
+                <a href="${page('info', item['rating_key'], server_id=item['server_id'])}" title="${item['title']}">
                     <div class="dashboard-recent-media-cover">
-                        <div class="dashboard-recent-media-cover-face" style="background-image: url(${page('pms_image_proxy', item['thumb'], item['rating_key'], 300, 300, fallback='cover')});">
+                        <div class="dashboard-recent-media-cover-face" style="background-image: url(${page('pms_image_proxy', item['thumb'], item['rating_key'], 300, 300, fallback='cover', server_id=item['server_id'])});">
                             <div class="dashboard-recent-media-overlay">
                                 <div class="dashboard-recent-media-overlay-text" id="added_at-${item['rating_key']}">
                                     <script>
@@ -104,10 +104,10 @@ DOCUMENTATION :: END
                     </div>
                     <div class="dashboard-recent-media-metacontainer">
                         <h3>
-                            <a href="${page('info', item['parent_rating_key'])}" title="${item['parent_title']}">${item['parent_title']}</a>
+                            <a href="${page('info', item['parent_rating_key'], server_id=item['server_id'])}" title="${item['parent_title']}">${item['parent_title']}</a>
                         </h3>
                         <h3 class="text-muted">
-                            <a class="text-muted" href="${page('info', item['rating_key'])}" title="${item['title']}">${item['title']}</a>
+                            <a class="text-muted" href="${page('info', item['rating_key'], server_id=item['server_id'])}" title="${item['title']}">${item['title']}</a>
                         </h3>
                         <h3 class="text-muted">&nbsp;</h3>
                     </div>
