--- a/data/interfaces/default/libraries.html
+++ b/data/interfaces/default/libraries.html
@@ -33,6 +33,7 @@
                 <th align="left" id="edit_row">Edit</th>
                 <th align="right" id="library_thumb"></th>
                 <th align="left" id="section_name">Library Name</th>
+                <th align="left" id="server_name">Server Name</th>
                 <th align="left" id="section_type">Library Type</th>
                 <th align="left" id="count">Total Movies / TV Shows / Artists</th>
                 <th align="left" id="parent_count">Total Seasons / Albums</th>
