--- a/data/interfaces/default/settings.html
+++ b/data/interfaces/default/settings.html
@@ -2908,7 +2908,7 @@ $(document).ready(function() {
                     '<li class="card card-sortable">' + 
                         '<div class="card-handle"><i class="fa fa-bars"></i></div>' + 
                         '<label>' + 
-                            '<input type="checkbox" id="hlcard-' + key + '" name="hlcard-' + key + '" value="' + key + '"> ' + title + 
+                            '<input type="checkbox" id="hlcard-' + libraries_list[i].server_id + '_' + key + '" name="hlcard-' + libraries_list[i].server_id + '_' + key + '" value="' + libraries_list[i].server_id + '_' + key + '"> ' + title + 
                         '</label>' + 
                     '</li>'
                 );
